boilerplate_v9/php_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
      tier: backend
  template:
    metadata:
      labels:
        app: php
        tier: backend
    spec:
      volumes:
      - name: dir
        hostPath:
          path: /code
      containers:
      - name: php
        image: lucasfer/laravel_app:latest
        volumeMounts:
        - name: dir
          mountPath: /code
        lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r /var/www/. /code/app"]
                command: ["/bin/sh", "-c", "chmod o+w /code/app/storage/ -R"]
                command: ["/bin/sh", "-c", "php /code/app/artisan migrate --seed"]
