boilerplate_v9/deployment.yml
apiVersion: v1
kind: Pod
metadata: 
  name: laravel
  labels:
    app: laravel
spec:
  containers:
    - name: laravel
      image: lucasfer/laravel_app:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: laravel
spec:
  ports:
  - port: 80
  selector:
    app: laravel
  clusterIP: None
