boilerplate_v9/deployment2.yml
apiVersion: v1
kind: Pod
metadata: 
  name: laravel
  labels:
    app: laravel
spec:
  containers:
    - name: laravel
      image: lucasfer/laravel_app
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: laravel
  labels:
    app: laravel
    tier: web
spec:
  type: NodePort
  selector:
    app: laravel
    tier: web
  ports:
    - port: 80
      nodePort: 30000
