boilerplate_v9/fpm.yml
apiVersion: v1
kind: Service
metadata:
  name: laravel-in-kubernetes-fpm
spec:
  selector:
    tier: laravel
    layer: fpm
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
