boilerplate_v9/nginx_service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  labels:
    tier: backend
    app: nginx
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
  selector:
    tier: backend
    app: nginx
  type: LoadBalancer
